# seoul-metro-realtime

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/split-commit/: SKILL.md
.github/workflows/: publish-pypi.yml
docs/superpowers/plans/: 2026-04-10-uvx-packaging.md
references/: 서울시 지하철 실시간 도착정보 API 명세서.md
scripts/: get_arrivals.py  station_lookup.py
src/seoul_metro_realtime/: __init__.py  get_arrivals.py
tests/: test_arrival_formatting.py  test_package_layout.py  test_station_lookup.py
